@@ -77,7 +77,7 @@ settings_xml_server = """<?xml version="1.0" encoding="ISO-8859-1"?>
 
   <listen tcp="19480" />
 
-  <cashier acquire_timeout="5" pokerlock_queue_timeout="30" />
+  <cashier acquire_timeout="5" pokerlock_queue_timeout="30" user_create="yes"/>
   <database name="pokernetworktest" host="@MYSQL_TEST_DBHOST@" user="pokernetworktest" password="pokernetwork"
             root_user="@MYSQL_TEST_DBROOT@" root_password="@MYSQL_TEST_DBROOT_PASSWORD@" schema="@srcdir@/../../database/schema.sql" command="@MYSQL@" />
   <path>.. ../@srcdir@ @POKER_ENGINE_PKGSYSCONFDIR@ @POKER_NETWORK_PKGSYSCONFDIR@</path>
@@ -1531,6 +1531,29 @@ class PokerAvatarTestCase(unittest.TestCase):
         d.addCallback(self.errorSetPokerPlayerImage, 0)
         return d
     # ------------------------------------------------------------------------
+    def cashIn(self, (client, packet), id ):
+        avatar = self.service.avatars[id]
+        avatar.queuePackets()
+        avatar.handlePacketLogic(PacketPokerCashIn(serial= client.getSerial(),
+                                                   currency = "http://fake",
+                                                   bserial = 0, value = 10))
+        found = False
+        for packet in avatar.resetPacketsQueue():
+            print "Packet found"
+            print packet
+#            if packet.type == PACKET_ACK:
+#                found = True
+#        self.assertEquals(found, True)
+        return (client, packet)
+    # ------------------------------------------------------------------------
+    def test32_cashIn(self):
+        """Test for doing a cash in operation."""
+        d = self.client_factory[0].established_deferred
+        d.addCallback(self.setupCallbackChain)
+        d.addCallback(self.login, 0)
+        d.addCallback(self.cashIn, 0)
+        return d
+    # ------------------------------------------------------------------------
     def tinyFunctions(self, (client, packet), id):
         avatar = self.service.avatars[id]
         self.assertEquals(avatar.getUrl(), "random")
@@ -1546,7 +1569,7 @@ class PokerAvatarTestCase(unittest.TestCase):
     # ------------------------------------------------------------------------
 def Run():
     loader = runner.TestLoader()
-#    loader.methodPrefix = "test31"
+    loader.methodPrefix = "test32"
     suite = loader.suiteFactory()
     suite.addTest(loader.loadClass(PokerAvatarTestCase))
     return runner.TrialRunner(
